tests/basic/bad/test57.pepa
% File: tests/bad/test57.pepa
% Syntax error, duplicated plus symbol in choice
P = (a, r).P + 
  + (a, r).P;
(P <> P)
